--- a/css/global.scss
+++ b/css/global.scss
@@ -1,7 +1,7 @@
 //colors
 $color_nav_mobi: #01243e;
 $color_cape_cod: #424141;
-$color_button: #cecbcb;
+$color_link: #9ab5ce;
 $white: #fff;
 $color_bon_jour: #e1e1e1;
 $color_light_grey: #f7f7f7;
@@ -12,14 +12,16 @@ $color_baltic_sea: #2b2b2b;
 $color_calypso: #32648a;
 $color_splash_page: #01375f;
 $color_venice_blue: rgba(3, 84, 144, 0.9);
-$color_btn_blue: rgba(3, 84, 144, 0.5);
+$color_btn_blue: rgba(3, 84, 144, 0.4);
 $color_nobel: #8a8888;
 $color_bgbtn: #0262a9;
 $color_brdr_btn: #4d7a9c;
 $color_logobdr: #3a85bd;
 $color_logo: #a4bf8b;
+
 //sizing
 $size_100: 100%;
+$size_50: 50%;
 
 //fonts
 $font_0: Roboto;
@@ -28,10 +30,7 @@ $font_2: Open +Sans;
 
 //urls
 $url_0: url(img/bg-home.png);
-$url_1: url(img/bg-about.png);
 $url_2: url(img/bg-footer.png);
-
-//Animations
 
 //@extend-elements
 //original selectors
@@ -53,45 +52,31 @@ $url_2: url(img/bg-footer.png);
 	line-height: 1.4em;
 }
 
-//original selectors
-//footer a, .social p
-%extend_3 {
-	color: $color_olivine;
-	font-size: 1.4rem;
-	display: block;
-	line-height: 1.6em;
-	text-transform: uppercase;
-}
-
 //Mixins
 @mixin btn_fade {
 	@include ease;
 	-webkit-transition: all .5s ease;
-}
-
+    }
 @mixin ease {
 	transition: all .9s ease;
-}
-@mixin shadow {box-shadow: 0 0 6px #e2dfdf;}
-
+    }
+@mixin shadow {
+    box-shadow: 0 0 6px #e2dfdf;
+    }
+@mixin bsi {
+    box-sizing: inherit;
+    }
+@mixin center {
+    transform: translate(-50%, -50%);
+    }
 
 @charset "UTF-8";
 html {
 	font-size: 62.5%;
-	//Instead of the line below you could use @include box-sizing($bs)
-	box-sizing: border-box;
+	@include bsi;
 }
-* {
-	//Instead of the line below you could use @include box-sizing($bs)
-	box-sizing: inherit;
-}
-*::after {
-	//Instead of the line below you could use @include box-sizing($bs)
-	box-sizing: inherit;
-}
-*::before {
-	//Instead of the line below you could use @include box-sizing($bs)
-	box-sizing: inherit;
+*, *::after, *::before {
+	@include bsi;
 }
 body {
 	font-size: 1.6rem;
@@ -120,7 +105,7 @@ h2 {
 }
 h3 {
 	@extend %extend_1;
-	font-weight: 400;
+	font-weight: 200;
 	display: block;
 	font-size: 3.0rem;
 	text-align: center;
@@ -142,7 +127,11 @@ a {
 	font-weight: 300;
 	@extend %extend_2;
 	text-decoration: none;
-	color: $white;
+    color: $color_link;
+    @include btn_fade;
+    &:hover {
+        color: $white;
+    }
 }
 em {
 	font-weight: 300;
@@ -215,9 +204,10 @@ section {
 	font-weight: 300;
 	text-transform: uppercase;
 	border-radius: 25px;
-	margin:0 auto;
+    margin:0 auto;
+    background: $color_btn_blue;
+    border: 1px solid $color_brdr_btn;
 	@include btn_fade;
-	background: $color_button;
 	&:hover {
 		background: $color_venice_blue;
 	}
@@ -234,25 +224,24 @@ header {
 	.inner {
 		overflow: hidden;
 		max-width: 1080px;
-		margin: 0 auto;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
 	}
 }
 .logo {
 	color: $white;
-	padding: 14px;
-	float: left;
+    padding: 14px;
+    display: flex;
 	h1 {
 		color: $white;
 	}
 	.brand {
 		background: $color_baltic_sea;
-		//Instead of the line below you could use @include border-radius($radius, $vertical-radius)
-		border-radius: 50%;
+		border-radius: $size_50;
 		border: 1px solid $color_baltic_sea;
 		width: 70px;
 		height: 70px;
-		display: block;
-		float: left;
 		margin: 0 14px;
 		position: relative;
 		em {
@@ -268,14 +257,13 @@ header {
 			}
 			&:last-child {
 				top: 11px;
-				right: 10px;
+				right: 12px;
 				color: $color_logo;
 				z-index: 1;
 			}
 		}
 	}
 	.name {
-		float: left;
 		padding: 6px 0;
 	}
 	&:hover .brand {
@@ -298,16 +286,11 @@ article {
 	display: none;
 }
 nav {
-	float: right;
 	margin: 40px 0 0;
 	a {
-		color: $color_button;
 		padding: 14px;
 		font-weight: 300;
 		font-size: 1.4rem;
-		&:hover {
-			color: $white;
-		}
 	}
 	em {
 		color: $color_olivine;
@@ -333,26 +316,21 @@ nav {
 	}
 	.button {
 		margin-top:15%;
-		background: $color_btn_blue;
-		border: 1px solid $color_brdr_btn;
-			&:hover {
-		background: $color_venice_blue;
 	}
-	}
-}
+    }
 
 //Portfolio Section
 #portfolio {
-	background: $color_light_grey;
-	article {
-	display:grid;
-	grid-template-columns:1fr 1fr 1fr;	
-	}
-	.items {
-		overflow: hidden;
-		margin: 0 auto;
-		width: 80%;
-	}
+        background: $color_light_grey;
+        article {
+        display:grid;
+        grid-template-columns:1fr 1fr 1fr;	
+        }
+        .items {
+            overflow: hidden;
+            margin: 0 auto;
+            width: 80%;
+        }
 	.overlay {
 		background-color: $color_venice_blue;
 		height: $size_100;
@@ -361,19 +339,16 @@ nav {
 		position: absolute;
 		display: block;
 		z-index: 1;
-		//Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
 		@include ease;
 		margin: 0;
 		p {
 			color: $color_bon_jour;
 			text-transform: uppercase;
-			border: 1px solid $color_button;
 			padding: 14px;
 			position: absolute;
-			top: 50%;
-			left: 50%;
-			//Instead of the line below you could use @include transform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
-			transform: translate(-50%, -50%);
+			top: $size_50;
+			left: $size_50;
+			transform: $center;
 		}
 	}
 	article div {
@@ -392,8 +367,7 @@ nav {
 		img {
 			width: $size_100;
 			height: auto;
-			//Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
-			transition: all 1s ease;
+            @include ease;
 			vertical-align: bottom;
 		}
 		span {
@@ -420,7 +394,8 @@ nav {
 
 
 //About Section
-#about {margin:0;
+#about {
+    margin:0;
 	article {display:flex;
 	}
 	.skills {
@@ -470,8 +445,7 @@ nav {
 		i {
 			color: $color_olivine;
 			border: 1px solid $color_celeste;
-			//Instead of the line below you could use @include border-radius($radius, $vertical-radius)
-			border-radius: 50%;
+			@include size_50;
 			padding: 6px;
 		}
 	}
@@ -520,11 +494,6 @@ footer {
 		text-transform: uppercase;
 		color: $color_celeste;
 	}
-	a {
-		@extend %extend_3;
-			&:hover {color: $white;}
-
-	}
 	strong {
 		color: $color_bon_jour;
 		font-size: 1.8rem;
@@ -536,12 +505,14 @@ footer {
 		margin: 70px auto 100px;
 		padding: 0;
 		overflow: hidden;
-		clear: both;
+        clear: both;              
+        a {
+            display:block;
+            padding:0;
+        }
 	}
 	.social {
-		float: left;
-		margin: 20px 2%;
-		width: 26.5%;
+		margin: 0;
 	}
 	h4 {
 		color: $white;
@@ -549,10 +520,8 @@ footer {
 		font-size: 1.8rem;
 		padding: 18px 0 24px;
 	}
-	.links {
-		float: left;
-		width: 15%;
-		margin: 20px 0 0;
+	nav {
+        margin: 0;
 	}
 	.button {
 		margin-top:5%;
@@ -563,34 +532,29 @@ footer {
 	}
 	span a {
 		color: $color_olivine;
-	}
-}
-.social {
-	p {
-		@extend %extend_3;
-	}
+    }
+
 	i {
 		padding-right: 4px;
-	}
-}
+    }
+
+
 .bioInfo {
-	float: left;
-	width: 48%;
-	margin: 20px 5% 0 14px;
-	p {
-		font-size: 1.4rem;
-	}
-	.logo {
-		padding: 0 0 100px 0;
-	}
-	span {
-		display: block;
-		overflow: hidden;
-	}
-	img {
-		//Instead of the line below you could use @include border-radius($radius, $vertical-radius)
-		border-radius: 50%;
-	}
+    margin: 0 16px;
+	    p {
+	    	font-size: 1.4rem;
+        }
+    .logo {
+            padding: 0 0 100px 0;
+        }
+    span {
+            display: block;
+            overflow: hidden;
+        }
+    img {
+            border-radius: $size_50;
+        }
+    }
 }
 .logoBrand {
 	border-top: 1px solid $color_calypso;
@@ -599,30 +563,34 @@ footer {
 	position: relative;
 	.logo {
 		position: absolute;
-		//Instead of the line below you could use @include transform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
-		transform: translate(-50%, -50%);
-		top: 50%;
-		left: 50%;
+		transform: translate(-$size_50, -$size_50);
+		top: $size_50;
+		left: $size_50;
 	}
 }
-.pic {
-	float: left;
-	padding: 0 14px;
+
+@media (min-width: 768px) {
+footer {
+   .inner {
+        display: flex;
+        justify-content: space-between;
+        }
+    } 
 }
+
 @media(max-width: 768px) {
 	.intro {
 		margin: 0;
 		padding:14px 0 0;
 	}
 	#about {
-		height: auto;
-		margin: 0;
-		article{
+    height: auto;
+    margin: 0;
+		article {
 		display:initial;	
 		}
 		.info {
 			width: auto;
-			float: none;
 			margin: 12px;
 			min-height: none;
 		}
@@ -651,20 +619,22 @@ footer {
 	article {
 		max-width: $size_100;
 	}
-	section {height:auto;
-		.button {display:none;}
+    section {
+        height:auto;
+        margin-bottom: 16px;
+		    .button {display:none;}
 	}
 	#home {
 		h3 {
-			font-size: 2.8rem;
+			font-size: 2rem;
 			padding: 8% 0 0;
-			line-height: 1.2em;
+            line-height: 1.2em;
+            font-weight:200;
 		}
 		.button {
 			display:none;
 		}
 		ul {
-			margin-top: 5%;
 			padding: 24px;
 			em {
 				display: none;
@@ -703,7 +673,7 @@ footer {
 			font-size: 14px;
 			text-align: center;
 			z-index: 5;
-			color: $color_button;
+			color: $color_link;
 			font-weight: 400;
 			&.active {
 				color: $white;
@@ -723,17 +693,13 @@ footer {
 		article {
 		display:block;	
 		}
-		article div {
-		/*width: 47%;*/
-		a {
-			float: none;
-		}
-	}
 }
-	#tech {
+
+#tech {
 	article {
 	display: grid;
-		grid-template-columns: 1fr 1fr;}
+    grid-template-columns: 1fr 1fr;
+        }
 	}
 }
 @media screen and(orientation:landscape) {
@@ -746,7 +712,7 @@ footer {
 		background-attachment: scroll;
 	}
 }
-@media(max-width: 750px) {
+@media(max-width: 768px) {
 	nav {
 		display: none;
 	}
@@ -762,12 +728,8 @@ footer {
 	.bioInfo {
 		width: $size_100;
 		padding: 0 14px;
-		float: none;
 		margin: 0;
 		text-align: center;
-	}
-	.pic {
-		float: none;
 	}
 	footer {
 		height: auto;
@@ -776,13 +738,11 @@ footer {
 			margin: 24px auto;
 			width: auto;
 			text-align: center;
-			float: none;
 		}
 		.social {
 			margin: 24px auto;
 			width: auto;
 			text-align: center;
-			float: none;
 		}
 		.inner {
 			margin: 0;
@@ -795,19 +755,13 @@ footer {
 		display: none;
 	}
 	#portfolio {
-	article div {
-		width: auto;
-		padding: 0;
-		float: none;
-		margin: 0 14px 12px;
-		}
-		.overlay {
-			display:none;
-		}
+        article div {
+            width: auto;
+            padding: 0;
+            margin: 0 14px 12px;
+            }
+            .overlay {
+                display:none;
+            }
 	}
-	#n2-ss-2item1, #n2-ss-2item2, #n2-ss-2item3 {
-		font-size:24px!important;
-	}
-
-
-	}
+}
