--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,282 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after {
+  content: '';
+  content: none;
+}
+
+q:before, q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after {
+  content: '';
+  content: none;
+}
+
+q:before, q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+@media (min-width: 768px) {
+  footer .inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+@media (max-width: 768px) {
+  .intro {
+    margin: 0;
+    padding: 14px 0 0;
+  }
+  #about {
+    height: auto;
+    margin: 0;
+  }
+  #about article {
+    display: initial;
+  }
+  #about .info {
+    width: auto;
+    margin: 12px;
+    min-height: none;
+  }
+  #about .skills {
+    padding: 12px 0;
+    display: none;
+  }
+  #about .skills li {
+    display: inline;
+    padding: 0;
+  }
+  #about .skills div {
+    padding: 0;
+    width: 58px;
+    height: 58px;
+    margin: 4px;
+  }
+  #about .skills span {
+    display: none;
+  }
+  #about .skills .fa {
+    font-size: 40px;
+    padding: 12px;
+  }
+  article {
+    max-width: 100%;
+  }
+  section {
+    height: auto;
+    margin-bottom: 16px;
+  }
+  section .button {
+    display: none;
+  }
+  #home h3 {
+    font-size: 2rem;
+    padding: 8% 0 0;
+    line-height: 1.2em;
+    font-weight: 200;
+  }
+  #home .button {
+    display: none;
+  }
+  #home ul {
+    padding: 24px;
+  }
+  #home ul em {
+    display: none;
+  }
+  #home ul li {
+    padding: 4px;
+    font-size: 1.6rem;
+    display: block;
+  }
+  #contact .button {
+    display: block;
+    margin-top: 0;
+  }
+  .logo {
+    padding: 10px;
+  }
+  #mobileNav {
+    display: table;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    opacity: 1;
+    z-index: 2;
+  }
+  #mobileNav a {
+    width: 25%;
+    display: table-cell;
+    background-color: #01243e;
+    padding: 8px;
+    border-bottom: 1px solid #424141;
+    font-size: 14px;
+    text-align: center;
+    z-index: 5;
+    color: #9ab5ce;
+    font-weight: 400;
+  }
+  #mobileNav a.active {
+    color: #fff;
+  }
+  #mobileNav a i {
+    display: block;
+    font-size: 20px;
+    padding-bottom: 4px;
+  }
+  header .inner {
+    max-width: 100%;
+    position: relative;
+  }
+  #portfolio article {
+    display: block;
+  }
+  #tech article {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+  }
+  nav {
+    display: none;
+  }
+  .menu {
+    display: block;
+    position: absolute;
+    right: 24px;
+    top: 12px;
+    color: #e1e1e1;
+    font-size: 2.8rem;
+    opacity: .5;
+  }
+  footer {
+    height: auto;
+    padding-bottom: 80px;
+  }
+  footer .bioInfo {
+    width: 100%;
+    padding: 0 14px;
+    margin: 0;
+    text-align: center;
+  }
+  footer .links {
+    margin: 24px auto;
+    width: auto;
+    text-align: center;
+  }
+  footer .social {
+    margin: 24px auto;
+    width: auto;
+    text-align: center;
+  }
+  footer .inner {
+    margin: 0;
+  }
+  footer .btn {
+    margin: 20px auto;
+  }
+  .top .fa {
+    display: none;
+  }
+  #portfolio article div {
+    width: auto;
+    padding: 0;
+    margin: 0 14px 12px;
+  }
+  #portfolio .overlay {
+    display: none;
+  }
+}
+
+@media screen and (orientation: landscape) {
+  #home h3 {
+    padding-top: 7%;
+  }
+}
+
+@media (max-device-width: 1024px) {
+  #home {
+    background-attachment: scroll;
+  }
+}
+
 h1, h2, h3, h4, h5 {
   font-family: Roboto, sans-serif;
   margin: 0;
@@ -37,13 +316,13 @@ h1 {
   font-size: 2.4rem;
   line-height: 1em;
   padding-top: 8px;
-  font-weight: 700;
+  font-weight: 200;
   letter-spacing: 1px;
 }
 
 h2 {
   color: #cccccc;
-  font-weight: 300;
+  font-weight: 200;
   font-size: 2.0rem;
   line-height: 1em;
 }
@@ -116,7 +395,7 @@ section ul li {
 }
 
 section ul em {
-  color: #9c9c9c;
+  color: #a4bf8b;
 }
 
 .top {
@@ -168,6 +447,210 @@ section ul em {
   color: #9c9c9c;
   font-size: 1.8rem;
   padding: 0 0 0 4px;
+}
+
+#home {
+  background: url(img/bg-home.png) no-repeat center center #01375f;
+  background-attachment: fixed;
+  background-size: cover;
+  position: relative;
+  height: 100vh;
+  padding-top: 0;
+  -webkit-box-shadow: 10px 4px 10px #9c9c9c;
+          box-shadow: 10px 4px 10px #9c9c9c;
+}
+
+#home h3 {
+  padding-top: 7%;
+  display: block;
+  font-size: 3.0rem;
+  color: #fff;
+}
+
+#home .button {
+  margin-top: 15%;
+}
+
+#portfolio {
+  background: #f7f7f7;
+}
+
+#portfolio article {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+}
+
+#portfolio .items {
+  overflow: hidden;
+  margin: 0 auto;
+  width: 80%;
+}
+
+#portfolio .overlay {
+  background-color: rgba(3, 84, 144, 0.9);
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  position: absolute;
+  display: block;
+  z-index: 1;
+  -webkit-transition: all .9s ease;
+  transition: all .9s ease;
+  margin: 0;
+}
+
+#portfolio .overlay p {
+  color: #e1e1e1;
+  text-transform: uppercase;
+  padding: 14px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+#portfolio article div {
+  margin: 10px;
+  background: #fff;
+  -webkit-box-shadow: 0 0 6px #e2dfdf;
+          box-shadow: 0 0 6px #e2dfdf;
+}
+
+#portfolio article div a {
+  display: block;
+  position: relative;
+}
+
+#portfolio article div a:hover .overlay {
+  opacity: 1;
+}
+
+#portfolio article div img {
+  width: 100%;
+  height: auto;
+  -webkit-transition: all .9s ease;
+  transition: all .9s ease;
+  vertical-align: bottom;
+}
+
+#portfolio article div span {
+  display: block;
+  clear: both;
+  margin: 0;
+  padding: 0 14px;
+  font-size: 14px;
+}
+
+#portfolio article div strong {
+  padding: 8px 0 0;
+  font-style: normal;
+  color: #000000;
+  display: block;
+}
+
+#portfolio article div em {
+  color: #8a8888;
+  padding: 0 0 8px 0;
+  display: block;
+  font-style: normal;
+}
+
+#about {
+  margin: 0;
+}
+
+#about article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#about .skills {
+  overflow: hidden;
+  margin: 0;
+  text-align: center;
+  width: 100%;
+  padding: 18px;
+}
+
+#about .skills span {
+  display: block;
+  clear: both;
+  font-size: 16px;
+}
+
+#about .skills .fa {
+  font-size: 58px;
+}
+
+#about .skills div em {
+  color: #cccccc;
+  font-style: normal;
+}
+
+#about .skills div em:first-child {
+  font-size: 4.8rem;
+}
+
+#about .skills div em:last-child {
+  font-size: 2.8rem;
+}
+
+#about h5 {
+  font-size: 2.0rem;
+  padding: 0;
+  color: #000000;
+}
+
+#about strong {
+  padding: 12px 0;
+  display: block;
+  color: #8a8888;
+  font-weight: 300;
+}
+
+#about .info {
+  padding: 18px;
+  width: auto;
+  margin: 24px 0 24px 1%;
+  background: #fff;
+  text-align: center;
+  -webkit-box-shadow: 0 0 6px #e2dfdf;
+          box-shadow: 0 0 6px #e2dfdf;
+}
+
+#about .info i {
+  color: #9c9c9c;
+  border: 1px solid #cccccc;
+  padding: 6px;
+}
+
+#tech article {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+#tech article .item {
+  margin: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#tech article .item img {
+  width: auto;
+  height: 100px;
 }
 
 header {
@@ -259,218 +742,13 @@ nav a {
   padding: 14px;
   font-weight: 300;
   font-size: 1.4rem;
+  line-height: 1.6em;
 }
 
 nav em {
-  color: #9c9c9c;
+  color: #a4bf8b;
   padding: 14px 0;
   font-weight: 300;
-}
-
-#home {
-  background: url(img/bg-home.png) no-repeat center center #01375f;
-  background-attachment: fixed;
-  background-size: cover;
-  position: relative;
-  height: 100vh;
-  padding-top: 0;
-  -webkit-box-shadow: 10px 4px 10px #9c9c9c;
-          box-shadow: 10px 4px 10px #9c9c9c;
-}
-
-#home h3 {
-  padding-top: 7%;
-  display: block;
-  font-size: 3.0rem;
-  color: #fff;
-}
-
-#home .button {
-  margin-top: 15%;
-}
-
-#portfolio {
-  background: #f7f7f7;
-}
-
-#portfolio article {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
-}
-
-#portfolio .items {
-  overflow: hidden;
-  margin: 0 auto;
-  width: 80%;
-}
-
-#portfolio .overlay {
-  background-color: rgba(3, 84, 144, 0.9);
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  position: absolute;
-  display: block;
-  z-index: 1;
-  -webkit-transition: all .9s ease;
-  transition: all .9s ease;
-  margin: 0;
-}
-
-#portfolio .overlay p {
-  color: #e1e1e1;
-  text-transform: uppercase;
-  padding: 14px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-#portfolio article div {
-  margin: 10px;
-  background: #fff;
-  -webkit-box-shadow: 0 0 6px #e2dfdf;
-          box-shadow: 0 0 6px #e2dfdf;
-}
-
-#portfolio article div a {
-  display: block;
-  position: relative;
-}
-
-#portfolio article div a:hover .overlay {
-  opacity: 1;
-}
-
-#portfolio article div img {
-  width: 100%;
-  height: auto;
-  -webkit-transition: all 1s ease;
-  transition: all 1s ease;
-  vertical-align: bottom;
-}
-
-#portfolio article div span {
-  display: block;
-  clear: both;
-  margin: 0;
-  padding: 0 14px;
-  font-size: 14px;
-}
-
-#portfolio article div strong {
-  padding: 8px 0 0;
-  font-style: normal;
-  color: #000000;
-  display: block;
-}
-
-#portfolio article div em {
-  color: #8a8888;
-  padding: 0 0 8px 0;
-  display: block;
-  font-style: normal;
-}
-
-#about {
-  margin: 0;
-}
-
-#about article {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-#about .skills {
-  overflow: hidden;
-  margin: 0;
-  text-align: center;
-  width: 100%;
-  padding: 18px;
-}
-
-#about .skills span {
-  display: block;
-  clear: both;
-  font-size: 16px;
-}
-
-#about .skills .fa {
-  font-size: 58px;
-}
-
-#about .skills div em {
-  color: #cccccc;
-  font-style: normal;
-}
-
-#about .skills div em:first-child {
-  font-size: 4.8rem;
-}
-
-#about .skills div em:last-child {
-  font-size: 2.8rem;
-}
-
-#about h5 {
-  font-size: 2.0rem;
-  padding: 0;
-  color: #000000;
-}
-
-#about strong {
-  padding: 12px 0;
-  display: block;
-  color: #8a8888;
-  font-weight: 300;
-}
-
-#about .info {
-  padding: 18px;
-  width: auto;
-  margin: 24px 0 24px 1%;
-  background: #fff;
-  text-align: center;
-  min-height: 300px;
-  -webkit-box-shadow: 0 0 6px #e2dfdf;
-          box-shadow: 0 0 6px #e2dfdf;
-}
-
-#about .info i {
-  color: #9c9c9c;
-  border: 1px solid #cccccc;
-  border-radius: 50%;
-  padding: 6px;
-}
-
-#tech article {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-}
-
-#tech article .item {
-  margin: 16px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#tech article .item img {
-  width: auto;
-  height: 100px;
 }
 
 footer {
@@ -480,7 +758,7 @@ footer {
   background: url(img/bg-footer.png) #01375f no-repeat center bottom;
   background-attachment: fixed;
   width: 100%;
-  padding: 12px 0;
+  padding: 20px 0;
   overflow: hidden;
   height: 100vh;
 }
@@ -718,21 +996,6 @@ footer .bioInfo img {
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
   }
-}
-
-@media screen and (orientation: landscape) {
-  #home h3 {
-    padding-top: 7%;
-  }
-}
-
-@media (max-device-width: 1024px) {
-  #home {
-    background-attachment: scroll;
-  }
-}
-
-@media (max-width: 768px) {
   nav {
     display: none;
   }
@@ -745,15 +1008,15 @@ footer .bioInfo img {
     font-size: 2.8rem;
     opacity: .5;
   }
-  .bioInfo {
+  footer {
+    height: auto;
+    padding-bottom: 80px;
+  }
+  footer .bioInfo {
     width: 100%;
     padding: 0 14px;
     margin: 0;
     text-align: center;
-  }
-  footer {
-    height: auto;
-    padding-bottom: 80px;
   }
   footer .links {
     margin: 24px auto;
@@ -781,6 +1044,18 @@ footer .bioInfo img {
   }
   #portfolio .overlay {
     display: none;
+  }
+}
+
+@media screen and (orientation: landscape) {
+  #home h3 {
+    padding-top: 7%;
+  }
+}
+
+@media (max-device-width: 1024px) {
+  #home {
+    background-attachment: scroll;
   }
 }
 /*# sourceMappingURL=global.css.map */
