--- a/css/global.scss
+++ b/css/global.scss
@@ -1,767 +1,8 @@
-//colors
-$color_nav_mobi: #01243e;
-$color_cape_cod: #424141;
-$color_link: #9ab5ce;
-$white: #fff;
-$color_bon_jour: #e1e1e1;
-$color_light_grey: #f7f7f7;
-$black: #000000;
-$color_celeste: #cccccc;
-$color_olivine: #9c9c9c;
-$color_baltic_sea: #2b2b2b;
-$color_calypso: #32648a;
-$color_splash_page: #01375f;
-$color_venice_blue: rgba(3, 84, 144, 0.9);
-$color_btn_blue: rgba(3, 84, 144, 0.4);
-$color_nobel: #8a8888;
-$color_bgbtn: #0262a9;
-$color_brdr_btn: #4d7a9c;
-$color_logobdr: #3a85bd;
-$color_logo: #a4bf8b;
+//CSS Index
 
-//sizing
-$size_100: 100%;
-$size_50: 50%;
-
-//fonts
-$font_0: Roboto;
-$font_1: sans-serif;
-$font_2: Open +Sans;
-
-//urls
-$url_0: url(img/bg-home.png);
-$url_2: url(img/bg-footer.png);
-
-//@extend-elements
-//original selectors
-//h1, h2, h3, h4, h5
-%extend_1 {
-	font-family: $font_0, $font_1;
-	margin: 0;
-	padding: 0;
-	color: $black;
-}
-
-//original selectors
-//em, a, ul, p, strong
-%extend_2 {
-	font-family: $font_2, $font_1;
-	margin: 0;
-	padding: 0;
-	color: $color_cape_cod;
-	line-height: 1.4em;
-}
-
-//Mixins
-@mixin btn_fade {
-	@include ease;
-	-webkit-transition: all .5s ease;
-    }
-@mixin ease {
-	transition: all .9s ease;
-    }
-@mixin shadow {
-    box-shadow: 0 0 6px #e2dfdf;
-    }
-@mixin bsi {
-    box-sizing: inherit;
-    }
-@mixin center {
-    transform: translate(-50%, -50%);
-    }
-
-@charset "UTF-8";
-html {
-	font-size: 62.5%;
-	@include bsi;
-}
-*, *::after, *::before {
-	@include bsi;
-}
-body {
-	font-size: 1.6rem;
-	background: $color_light_grey;
-	margin: 0;
-	padding: 0;
-	color: $white;
-	height: 100%;
-}
-
-//Fonts
-h1 {
-	@extend %extend_1;
-	font-size: 2.4rem;
-	line-height: 1em;
-	padding-top: 8px;
-	font-weight: 200;
-	letter-spacing: 1px;
-}
-h2 {
-	@extend %extend_1;
-	color: $color_celeste;
-	font-weight: 200;
-	font-size: 2.0rem;
-	line-height: 1em;
-}
-h3 {
-	@extend %extend_1;
-	font-weight: 200;
-	display: block;
-	font-size: 3.0rem;
-	text-align: center;
-}
-h4 {
-	@extend %extend_1;
-}
-h5 {
-	@extend %extend_1;
-	font-size: 1.2rem;
-	font-weight: 300;
-	padding: 0 0 14px 0;
-}
-p {
-	font-weight: 300;
-	@extend %extend_2;
-}
-a {
-	font-weight: 300;
-	@extend %extend_2;
-	text-decoration: none;
-    color: $color_link;
-    @include btn_fade;
-    &:hover {
-        color: $white;
-    }
-}
-em {
-	font-weight: 300;
-	@extend %extend_2;
-}
-ul {
-	@extend %extend_2;
-}
-strong {
-	@extend %extend_2;
-	font-weight: 400;
-}
-
-//Global page Elements
-section {
-	clear: both;
-	width: $size_100;
-	margin: 0 0 100px;
-	position: relative;
-	h4 {
-		font-weight: 300;
-		display: block;
-		font-size: 1.8rem;
-		text-align: center;
-		color: $color_cape_cod;
-		padding: 0 0 12px;
-	}
-	ul {
-		text-align: center;
-		padding: 12px;
-		li {
-			display: inline-block;
-			padding: 0 14px;
-			font-size: 1.8rem;
-			font-weight: 300;
-			color: $color_celeste;
-		}
-		em {
-			color: $color_olivine;
-		}
-	}
-}
-.top {
-	position: fixed;
-	bottom: 40px;
-	left: 40px;
-	z-index: 1;
-	.fa {
-		display: block;
-		padding: 8px;
-		color: $color_olivine;
-		font-size: 30px;
-		opacity: .7;
-	}
-}
-.menu {
-	display: none;
-}
-#wrapper {
-	width: $size_100;
-	position: relative;
-}
-
-.button {
-	width: 220px;
-	padding: 8px 4px 8px 8px;
-	text-align: center;
-	color: $white;
-	display: block;
-	font-weight: 300;
-	text-transform: uppercase;
-	border-radius: 25px;
-    margin:0 auto;
-    background: $color_btn_blue;
-    border: 1px solid $color_brdr_btn;
-	@include btn_fade;
-	&:hover {
-		background: $color_venice_blue;
-	}
-	.fa {
-		color: $color_olivine;
-		font-size: 1.8rem;
-		padding: 0 0 0 4px;
-	}
-}
-
-//Header Elements
-header {
-	padding-top: 8px;
-	.inner {
-		overflow: hidden;
-		max-width: 1080px;
-        margin: 0 auto;
-        display: flex;
-        justify-content: space-between;
-	}
-}
-.logo {
-	color: $white;
-    padding: 14px;
-    display: flex;
-	h1 {
-		color: $white;
-	}
-	.brand {
-		background: $color_baltic_sea;
-		border-radius: $size_50;
-		border: 1px solid $color_baltic_sea;
-		width: 70px;
-		height: 70px;
-		margin: 0 14px;
-		position: relative;
-		em {
-			position: absolute;
-			font-style: normal;
-			font-size: 3.4rem;
-			font-weight: 900;
-			color: $white;
-			&:first-child {
-				top: 11px;
-				left: 11px;
-				z-index: 2;
-			}
-			&:last-child {
-				top: 11px;
-				right: 12px;
-				color: $color_logo;
-				z-index: 1;
-			}
-		}
-	}
-	.name {
-		padding: 6px 0;
-	}
-	&:hover .brand {
-		em {
-			&:first-child {
-				color: $color_logo;
-			}
-			&:last-child {
-				color: $white;
-				z-index: 3;
-			}
-		}
-	}
-}
-article {
-	margin: 0 auto;
-	max-width: 1080px;
-}
-#mobileNav {
-	display: none;
-}
-nav {
-	margin: 40px 0 0;
-	a {
-		padding: 14px;
-		font-weight: 300;
-		font-size: 1.4rem;
-	}
-	em {
-		color: $color_olivine;
-		padding: 14px 0;
-		font-weight: 300;
-	}
-}
-
-//Splash Page
-#home {
-	background: $url_0 no-repeat center center $color_splash_page;
-	background-attachment: fixed;
-	background-size: cover;
-	position: relative;
-	height: 100vh;
-	padding-top: 0;
-	box-shadow: 10px 4px 10px $color_olivine;
-	h3 {
-		padding-top: 7%;
-		display: block;
-		font-size: 3.0rem;
-		color: $white;
-	}
-	.button {
-		margin-top:15%;
-	}
-    }
-
-//Portfolio Section
-#portfolio {
-        background: $color_light_grey;
-        article {
-        display:grid;
-        grid-template-columns:1fr 1fr 1fr;	
-        }
-        .items {
-            overflow: hidden;
-            margin: 0 auto;
-            width: 80%;
-        }
-	.overlay {
-		background-color: $color_venice_blue;
-		height: $size_100;
-		width: $size_100;
-		opacity: 0;
-		position: absolute;
-		display: block;
-		z-index: 1;
-		@include ease;
-		margin: 0;
-		p {
-			color: $color_bon_jour;
-			text-transform: uppercase;
-			padding: 14px;
-			position: absolute;
-			top: $size_50;
-			left: $size_50;
-			transform: $center;
-		}
-	}
-	article div {
-		margin: 10px;
-		background: $white;
-		@include shadow;
-		a {
-			display: block;
-			position: relative;
-			&:hover {
-				.overlay {
-					opacity: 1;
-				}
-			}
-		}
-		img {
-			width: $size_100;
-			height: auto;
-            @include ease;
-			vertical-align: bottom;
-		}
-		span {
-			display: block;
-			clear: both;
-			margin: 0;
-			padding: 0 14px;
-			font-size:14px;
-		}
-		strong {
-			padding: 8px 0 0;
-			font-style: normal;
-			color: $black;
-			display: block;
-		}
-		em {
-			color: $color_nobel;
-			padding: 0 0 8px 0;
-			display: block;
-			font-style: normal;
-		}
-	}
-}
-
-
-//About Section
-#about {
-    margin:0;
-	article {display:flex;
-	}
-	.skills {
-		overflow: hidden;
-		margin: 0;
-		text-align: center;
-		width: $size_100;
-		padding: 18px;
-		span {
-			display: block;
-			clear: both;
-			font-size: 16px;
-		}
-		.fa {
-			font-size: 58px;
-		}
-		div em {
-			color: $color_celeste;
-			font-style: normal;
-			&:first-child {
-				font-size: 4.8rem;
-			}
-			&:last-child {
-				font-size: 2.8rem;
-			}
-		}
-	}
-	h5 {
-		font-size: 2.0rem;
-		padding: 0;
-		color: $black;
-	}
-	strong {
-		padding: 12px 0;
-		display: block;
-		color: $color_nobel;
-		font-weight: 300;
-	}
-	.info {
-		padding: 18px;
-		width: auto;
-		margin: 24px 0 24px 1%;
-		background: $white;
-		text-align: center;
-		min-height: 300px;
-		@include shadow;
-		i {
-			color: $color_olivine;
-			border: 1px solid $color_celeste;
-			@include size_50;
-			padding: 6px;
-		}
-	}
-}
-
-#tech {
-	article {
-	display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-		.item {
-			margin:16px;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-		 img {
-			width:auto;
-			height:100px;
-			}
-		}
-	}
-	
-} 		
-
-//Footer Elements
-footer {
-	margin-top: 80px;
-	clear: both;
-	border: none;
-	background: $url_2 $color_splash_page no-repeat center bottom;
-	background-attachment: fixed;
-	width: $size_100;
-	padding: 12px 0;
-	overflow: hidden;
-	height: 100vh;
-	h3 {
-		color: $white;
-	}
-	p {
-		color: $white;
-	}
-	em {
-		color: $white;
-		font-style: normal;
-		display: block;
-		padding-bottom: 8px;
-		text-transform: uppercase;
-		color: $color_celeste;
-	}
-	strong {
-		color: $color_bon_jour;
-		font-size: 1.8rem;
-		padding: 0 0 6px;
-		display: block;
-	}
-	.inner {
-		max-width: 1110px;
-		margin: 70px auto 100px;
-		padding: 0;
-		overflow: hidden;
-        clear: both;              
-        a {
-            display:block;
-            padding:0;
-        }
-	}
-	.social {
-		margin: 0;
-	}
-	h4 {
-		color: $white;
-		font-weight: normal;
-		font-size: 1.8rem;
-		padding: 18px 0 24px;
-	}
-	nav {
-        margin: 0;
-	}
-	.button {
-		margin-top:5%;
-		background: $color_btn_blue;
-			&:hover {
-		background: $color_venice_blue;
-	}
-	}
-	span a {
-		color: $color_olivine;
-    }
-
-	i {
-		padding-right: 4px;
-    }
-
-
-.bioInfo {
-    margin: 0 16px;
-	    p {
-	    	font-size: 1.4rem;
-        }
-    .logo {
-            padding: 0 0 100px 0;
-        }
-    span {
-            display: block;
-            overflow: hidden;
-        }
-    img {
-            border-radius: $size_50;
-        }
-    }
-}
-.logoBrand {
-	border-top: 1px solid $color_calypso;
-	margin: 54px 0;
-	width: $size_100;
-	position: relative;
-	.logo {
-		position: absolute;
-		transform: translate(-$size_50, -$size_50);
-		top: $size_50;
-		left: $size_50;
-	}
-}
-
-@media (min-width: 768px) {
-footer {
-   .inner {
-        display: flex;
-        justify-content: space-between;
-        }
-    } 
-}
-
-@media(max-width: 768px) {
-	.intro {
-		margin: 0;
-		padding:14px 0 0;
-	}
-	#about {
-    height: auto;
-    margin: 0;
-		article {
-		display:initial;	
-		}
-		.info {
-			width: auto;
-			margin: 12px;
-			min-height: none;
-		}
-		.skills {
-			padding: 12px 0;
-			display: none;
-			li {
-				display: inline;
-				padding: 0;
-			}
-			div {
-				padding: 0;
-				width: 58px;
-				height: 58px;
-				margin: 4px;
-			}
-			span {
-				display: none;
-			}
-			.fa {
-				font-size: 40px;
-				padding: 12px;
-			}
-		}
-	}
-	article {
-		max-width: $size_100;
-	}
-    section {
-        height:auto;
-        margin-bottom: 16px;
-		    .button {display:none;}
-	}
-	#home {
-		h3 {
-			font-size: 2rem;
-			padding: 8% 0 0;
-            line-height: 1.2em;
-            font-weight:200;
-		}
-		.button {
-			display:none;
-		}
-		ul {
-			padding: 24px;
-			em {
-				display: none;
-			}
-			li {
-				padding: 4px;
-				font-size: 1.6rem;
-				display: block;
-			}
-		}
-	}
-	#contact {
-		.button {
-			display:block;
-			margin-top:0;
-		}
-		
-	}
-	.logo {
-		padding: 10px;
-	}
-	#mobileNav {
-		display: table;
-		position: fixed;
-		bottom: 0;
-		left: 0;
-		width: $size_100;
-		opacity: 1;
-		z-index: 2;
-		a {
-			width: 25%;
-			display: table-cell;
-			background-color: $color_nav_mobi;
-			padding: 8px;
-			border-bottom: 1px solid $color_cape_cod;
-			font-size: 14px;
-			text-align: center;
-			z-index: 5;
-			color: $color_link;
-			font-weight: 400;
-			&.active {
-				color: $white;
-			}
-			i {
-				display: block;
-				font-size: 20px;
-				padding-bottom: 4px;
-			}
-		}
-	}
-	header .inner {
-		max-width: $size_100;
-		position: relative;
-	}
-	#portfolio {
-		article {
-		display:block;	
-		}
-}
-
-#tech {
-	article {
-	display: grid;
-    grid-template-columns: 1fr 1fr;
-        }
-	}
-}
-@media screen and(orientation:landscape) {
-	#home h3 {
-		padding-top: 7%;
-	}
-}
-@media(max-device-width: 1024px) {
-	#home {
-		background-attachment: scroll;
-	}
-}
-@media(max-width: 768px) {
-	nav {
-		display: none;
-	}
-	.menu {
-		display: block;
-		position: absolute;
-		right: 24px;
-		top: 12px;
-		color: $color_bon_jour;
-		font-size: 2.8rem;
-		opacity: .5;
-	}
-	.bioInfo {
-		width: $size_100;
-		padding: 0 14px;
-		margin: 0;
-		text-align: center;
-	}
-	footer {
-		height: auto;
-		padding-bottom: 80px;
-		.links {
-			margin: 24px auto;
-			width: auto;
-			text-align: center;
-		}
-		.social {
-			margin: 24px auto;
-			width: auto;
-			text-align: center;
-		}
-		.inner {
-			margin: 0;
-		}
-		.btn {
-			margin: 20px auto;
-		}
-	}
-	.top .fa {
-		display: none;
-	}
-	#portfolio {
-        article div {
-            width: auto;
-            padding: 0;
-            margin: 0 14px 12px;
-            }
-            .overlay {
-                display:none;
-            }
-	}
-}
+@import "reset";
+@import 'master';
+@import "type";
+@import "header";
+@import "footer";
+@import "media-queries";
