--- a/css/_type.scss
+++ b/css/_type.scss
@@ -22,7 +22,7 @@ h1 {
 	@extend %extend_1;
 	font-size: 2.4rem;
 	line-height: 1em;
-	padding-top: 8px;
+	padding-top: 2px;
 	font-weight: 200;
 	letter-spacing: 1px;
 }
@@ -66,6 +66,7 @@ a {
 em {
 	font-weight: 300;
 	@extend %extend_2;
+	color: $color_logo;
 }
 ul {
 	@extend %extend_2;
@@ -79,7 +80,7 @@ strong {
 section {
 	clear: both;
 	width: $size_100;
-	margin: 0 0 100px;
+	margin: 0 0 50px;
 	position: relative;
 	h4 {
 		font-weight: 300;
@@ -97,10 +98,7 @@ section {
 			padding: 0 14px;
 			font-size: 1.8rem;
 			font-weight: 300;
-			color: $color_celeste;
-		}
-		em {
-			color: $color_logo;
+			color: $color_link;
 		}
 	}
 }
@@ -158,13 +156,11 @@ section {
 	padding-top: 0;
 	box-shadow: 10px 4px 10px $color_olivine;
 	h3 {
-		padding-top: 7%;
-		display: block;
-		font-size: 3.0rem;
+		padding-top: 10%;
 		color: $white;
 	}
 	.button {
-		margin-top:15%;
+		margin-top:10%;
 	}
     }
 
@@ -244,7 +240,6 @@ section {
 
 //About Section
 #about {
-    margin:0;
 	article {display:flex;
 	}
 	.skills {
