font awesome updates

--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -72,7 +72,8 @@ footer {
 .bioInfo {
     margin: 0 16px;
 	    p {
-	    	font-size: 1.4rem;
+			font-size: 1.4rem;
+			color:$color_link;
         }
     .logo {
             padding: 0 0 100px 0;
