--- a/css/_master.scss
+++ b/css/_master.scss
@@ -1,6 +1,7 @@
 // Functions, Variables, Mixins
 
 //colors
+$color_fa-skills: #cddbe8;
 $color_nav_mobi: #01243e;
 $color_cape_cod: #424141;
 $color_link: #9ab5ce;
