--- a/css/_master.scss
+++ b/css/_master.scss
@@ -6,7 +6,7 @@ $color_nav_mobi: #01243e;
 $color_cape_cod: #424141;
 $color_link: #9ab5ce;
 $white: #fff;
-$color_bon_jour: #e1e1e1;
+$color_bon_jour: #c0d4e6;
 $color_light_grey: #f7f7f7;
 $black: #000000;
 $color_celeste: #cccccc;
