--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,6 +1,9 @@
 //Header Elements
 
 header {
+	strong {
+		color: $white;
+	}
 	.inner {
         display: flex;
         justify-content: space-around;
@@ -16,9 +19,16 @@ header {
 	p {
 		color: $color_celeste; 
 		line-height: 1em;
-		font-size: 1.4rem;
+		font-size: 1.3rem;
+		padding:0;
 
 	}
+	.name {
+		padding: .6em 0;
+			em {
+			padding:0 .4em;	
+			}
+		}
 	.brand {
 		background: $color_baltic_sea;
 		border-radius: $size_50;
@@ -46,12 +56,7 @@ header {
 			}
 		}
 	}
-	.name {
-	padding: 6px 0;
-		em {
-		padding:0 4px;	
-		}
-	}
+
 	&:hover .brand {
 		em {
 			&:first-child {
@@ -63,9 +68,6 @@ header {
 			}
 		}
 	}
-}
-article {
-	margin: 0;
 }
 #mobileNav {
 	display: none;
@@ -85,8 +87,12 @@ nav {
 		}
 		i {
 			padding-right: 4px;
-			color:$color_link;
+			color:$color_logo;
 		}
 		}
 	}
+
+
+
 }
+
