--- a/css/_type.scss
+++ b/css/_type.scss
@@ -2,13 +2,16 @@
 
 @charset "UTF-8";
 html {
+	box-sizing:border-box;
 	font-size: 62.5%;
 	@include bsi;
+	height: 100%;
 }
 *, *::after, *::before {
 	@include bsi;
 }
 body {
+	-webkit-font-smoothing:antialiased;
 	font-size: 1.6rem;
 	background: $color_light_grey;
 	margin: 0;
@@ -27,20 +30,22 @@ h1 {
 }
 h2 {
 	@extend %extend_1;
-	color: $color_celeste;
 	font-weight: 100;
 	font-size: 3.2rem;
 	line-height: 1em;
+	text-align:left;
+	padding:0 0 .4em;
 }
 h3 {
 	@extend %extend_1;
 	font-weight: 200;
 	display: block;
-	font-size: 4.0rem;
-	text-align: center;
+	font-size: 3.2rem;
 }
 h4 {
 	@extend %extend_1;
+	font-weight:100;
+	padding:0.8em 0 1.2em;
 }
 h5 {
 	@extend %extend_1;
@@ -51,6 +56,7 @@ h5 {
 p {
 	font-weight: 300;
 	@extend %extend_2;
+	padding:0 0 1em;
 }
 a {
 	font-weight: 300;
@@ -72,11 +78,17 @@ ul {
 }
 strong {
 	@extend %extend_2;
-	font-weight: 400;
+	font-weight: 600;
+	padding:1.6em 0 0;
+	font-size:2rem;
 }
 
 //Global page Elements
-section {
+section#home {
+	.item img{
+		width:50px;
+		height:auto;
+	}
 	clear: both;
 	width: $size_100;
 	margin: 0 0 50px;
@@ -119,19 +131,20 @@ section {
 }
 #wrapper {
 	width: $size_100;
+	height: $size_100;
 	position: relative;
 }
 
 .button {
 	width: 220px;
-	padding: 8px 4px 8px 8px;
+	padding: 0.5em 0.225em 0.5em 0.5em;
+	margin: 1.4em 0;
 	text-align: center;
 	color: $white;
 	display: block;
 	font-weight: 300;
 	text-transform: uppercase;
-	border-radius: 25px;
-    margin:0 auto;
+	border-radius: 0.4em;
     background: $color_btn_blue;
     border: 1px solid $color_brdr_btn;
 	@include btn_fade;
