--- a/css/global.css
+++ b/css/global.css
@@ -42,240 +42,12 @@ table {
   border-spacing: 0;
 }
 
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after {
-  content: '';
-  content: none;
-}
-
-q:before, q:after {
-  content: '';
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-@media (min-width: 768px) {
-  footer .inner {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-}
-
-@media (max-width: 768px) {
-  .intro {
-    margin: 0;
-    padding: 14px 0 0;
-  }
-  #about {
-    height: auto;
-    margin: 0;
-  }
-  #about article {
-    display: initial;
-  }
-  #about .info {
-    width: auto;
-    margin: 12px;
-    min-height: none;
-  }
-  #about .skills {
-    padding: 12px 0;
-    display: none;
-  }
-  #about .skills li {
-    display: inline;
-    padding: 0;
-  }
-  #about .skills div {
-    padding: 0;
-    width: 58px;
-    height: 58px;
-    margin: 4px;
-  }
-  #about .skills span {
-    display: none;
-  }
-  #about .skills .fa {
-    font-size: 40px;
-    padding: 12px;
-  }
-  article {
-    max-width: 100%;
-  }
-  section {
-    height: auto;
-    margin-bottom: 16px;
-  }
-  section .button {
-    display: none;
-  }
-  #home h3 {
-    font-size: 2rem;
-    padding: 8% 0 0;
-    line-height: 1.2em;
-    font-weight: 200;
-  }
-  #home .button {
-    display: none;
-  }
-  #home ul {
-    padding: 24px;
-  }
-  #home ul em {
-    display: none;
-  }
-  #home ul li {
-    padding: 4px;
-    font-size: 1.6rem;
-    display: block;
-  }
-  #contact .button {
-    display: block;
-    margin-top: 0;
-  }
-  .logo {
-    padding: 10px;
-  }
-  #mobileNav {
-    display: table;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    opacity: 1;
-    z-index: 2;
-  }
-  #mobileNav a {
-    width: 25%;
-    display: table-cell;
-    background-color: #01243e;
-    padding: 8px;
-    border-bottom: 1px solid #424141;
-    font-size: 14px;
-    text-align: center;
-    z-index: 5;
-    color: #9ab5ce;
-    font-weight: 400;
-  }
-  #mobileNav a.active {
-    color: #fff;
-  }
-  #mobileNav a i {
-    display: block;
-    font-size: 20px;
-    padding-bottom: 4px;
-  }
-  header .inner {
-    max-width: 100%;
-    position: relative;
-  }
-  #portfolio article {
-    display: block;
-  }
-  #tech article {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-  }
-  nav {
-    display: none;
-  }
-  .menu {
-    display: block;
-    position: absolute;
-    right: 24px;
-    top: 12px;
-    color: #c0d4e6;
-    font-size: 2.8rem;
-    opacity: .5;
-  }
-  footer {
-    height: auto;
-    padding-bottom: 80px;
-  }
-  footer .bioInfo {
-    width: 100%;
-    padding: 0 14px;
-    margin: 0;
-    text-align: center;
-  }
-  footer .links {
-    margin: 24px auto;
-    width: auto;
-    text-align: center;
-  }
-  footer .social {
-    margin: 24px auto;
-    width: auto;
-    text-align: center;
-  }
-  footer .inner {
-    margin: 0;
-  }
-  footer .btn {
-    margin: 20px auto;
-  }
-  .top .fa {
-    display: none;
-  }
-  #portfolio article div {
-    width: auto;
-    padding: 0;
-    margin: 0 14px 12px;
-  }
-  #portfolio .overlay {
-    display: none;
-  }
-}
-
-@media (max-device-width: 1024px) {
-  #home {
-    background-attachment: scroll;
-  }
-}
-
 h1, h2, h3, h4, h5 {
   font-family: Roboto, sans-serif;
   margin: 0;
   padding: 0;
   color: #000000;
+  display: block;
 }
 
 p, a, em, ul, strong {
@@ -287,9 +59,12 @@ p, a, em, ul, strong {
 }
 
 html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-size: 62.5%;
   -webkit-box-sizing: inherit;
           box-sizing: inherit;
+  height: 100%;
 }
 
 *, *::after, *::before {
@@ -298,6 +73,7 @@ html {
 }
 
 body {
+  -webkit-font-smoothing: antialiased;
   font-size: 1.6rem;
   background: #f7f7f7;
   margin: 0;
@@ -314,17 +90,22 @@ h1 {
 }
 
 h2 {
-  color: #cccccc;
   font-weight: 100;
   font-size: 3.2rem;
   line-height: 1em;
+  text-align: left;
+  padding: 0 0 .4em;
 }
 
 h3 {
   font-weight: 200;
   display: block;
-  font-size: 4.0rem;
-  text-align: center;
+  font-size: 3.2rem;
+}
+
+h4 {
+  font-weight: 100;
+  padding: 0.8em 0 1.2em;
 }
 
 h5 {
@@ -335,6 +116,7 @@ h5 {
 
 p {
   font-weight: 300;
+  padding: 0 0 1em;
 }
 
 a {
@@ -356,17 +138,24 @@ em {
 }
 
 strong {
-  font-weight: 400;
+  font-weight: 600;
+  padding: 1.6em 0 0;
+  font-size: 2rem;
 }
 
-section {
+section#home {
   clear: both;
   width: 100%;
   margin: 0 0 50px;
   position: relative;
 }
 
-section h4 {
+section#home .item img {
+  width: 50px;
+  height: auto;
+}
+
+section#home h4 {
   font-weight: 300;
   display: block;
   font-size: 1.8rem;
@@ -375,12 +164,12 @@ section h4 {
   padding: 10px;
 }
 
-section ul {
+section#home ul {
   text-align: center;
   padding: 12px;
 }
 
-section ul li {
+section#home ul li {
   display: inline-block;
   padding: 0 14px;
   font-size: 1.8rem;
@@ -409,21 +198,22 @@ section ul li {
 
 #wrapper {
   width: 100%;
+  height: 100%;
   position: relative;
 }
 
 .button {
   width: 220px;
-  padding: 8px 4px 8px 8px;
+  padding: 0.5em 0.225em 0.5em 0.5em;
+  margin: 1.4em 0;
   text-align: center;
   color: #fff;
   display: block;
   font-weight: 300;
   text-transform: uppercase;
-  border-radius: 25px;
-  margin: 0 auto;
+  border-radius: 0.4em;
   background: rgba(3, 84, 144, 0.4);
-  border: 1px solid #4d7a9c;
+  border: 1px solid #4177a0;
   -webkit-transition: all .9s ease;
   transition: all .9s ease;
   -webkit-transition: all .5s ease;
@@ -437,6 +227,10 @@ section ul li {
   color: #9c9c9c;
   font-size: 1.8rem;
   padding: 0 0 0 4px;
+}
+
+header strong {
+  color: #fff;
 }
 
 header .inner {
@@ -462,7 +256,16 @@ header .inner {
 .logo p {
   color: #cccccc;
   line-height: 1em;
-  font-size: 1.4rem;
+  font-size: 1.3rem;
+  padding: 0;
+}
+
+.logo .name {
+  padding: .6em 0;
+}
+
+.logo .name em {
+  padding: 0 .4em;
 }
 
 .logo .brand {
@@ -496,14 +299,6 @@ header .inner {
   z-index: 1;
 }
 
-.logo .name {
-  padding: 6px 0;
-}
-
-.logo .name em {
-  padding: 0 4px;
-}
-
 .logo:hover .brand em:first-child {
   color: #a4bf8b;
 }
@@ -511,10 +306,6 @@ header .inner {
 .logo:hover .brand em:last-child {
   color: #fff;
   z-index: 3;
-}
-
-article {
-  margin: 0;
 }
 
 #mobileNav {
@@ -540,7 +331,36 @@ article {
 
 #home nav a i {
   padding-right: 4px;
-  color: #9ab5ce;
+  color: #a4bf8b;
+}
+
+.home section {
+  margin: 0 13%;
+}
+
+.intro {
+  padding-bottom: 24px;
+}
+
+#home {
+  background: url(img/bg-home.png) no-repeat center center #01375f;
+  background-attachment: fixed;
+  background-size: cover;
+  position: relative;
+  height: 100vh;
+  padding-top: 0;
+  -webkit-box-shadow: 10px 4px 10px #9c9c9c;
+          box-shadow: 10px 4px 10px #9c9c9c;
+}
+
+#home h1 {
+  padding-top: 10%;
+  color: #fff;
+  text-align: center;
+}
+
+#home .button {
+  margin: 10% auto 0;
 }
 
 #about article {
@@ -550,6 +370,9 @@ article {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 1.125em;
 }
 
 #about .skills {
@@ -557,13 +380,13 @@ article {
   margin: 0;
   text-align: center;
   width: 100%;
-  padding: 18px;
+  padding: 1.125em;
 }
 
 #about .skills span {
   display: block;
   clear: both;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 #about .skills .fa {
@@ -584,9 +407,10 @@ article {
 }
 
 #about h5 {
-  font-size: 2.0rem;
+  font-size: 2.5rem;
   padding: 0;
   color: #000000;
+  display: inline;
 }
 
 #about strong {
@@ -597,21 +421,43 @@ article {
 }
 
 #about .info {
-  padding: 18px;
-  width: 40%;
-  margin: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+  max-height: 350px;
+  margin: 0 0 1.6em;
   background: #fff;
-  text-align: center;
-  -webkit-box-shadow: 0 0 6px #e2dfdf;
-          box-shadow: 0 0 6px #e2dfdf;
+  -webkit-box-shadow: 0 6px 6px #e2dfdf;
+          box-shadow: 0 6px 6px #e2dfdf;
+}
+
+#about .info div {
+  width: 50%;
+  padding: 0;
+}
+
+#about .info figure {
+  width: 50%;
+}
+
+#about .info figure img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 #about .info i {
   color: #cddbe8;
-  padding: 8px;
+  padding: 0.4em 0.4em 0;
   border-radius: 50%;
-  font-size: 6rem;
+  font-size: 4rem;
   margin: 0 0 4px;
+}
+
+#about .info p {
+  padding: 0.875em;
 }
 
 #tech article {
@@ -639,41 +485,25 @@ article {
   height: 100px;
 }
 
-#home {
-  background: url(img/bg-home.png) no-repeat center center #01375f;
-  background-attachment: fixed;
-  background-size: cover;
-  position: relative;
-  height: 100vh;
-  padding-top: 0;
-  -webkit-box-shadow: 10px 4px 10px #9c9c9c;
-          box-shadow: 10px 4px 10px #9c9c9c;
-}
-
-#home h2 {
-  padding-top: 10%;
-  color: #fff;
-  text-align: center;
-}
-
-#home .button {
-  margin-top: 10%;
-}
-
-#portfolio {
-  background: #f7f7f7;
-}
-
 #portfolio article {
+  width: auto;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: auto;
-  width: 88%;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: (1fr)[2];
+      grid-template-rows: repeat(2, 1fr);
+  grid-gap: 1px;
+  background: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+#portfolio .article__img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 #portfolio .items {
@@ -704,14 +534,14 @@ article {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  border: 1px solid #4d7a9c;
+  border: 1px solid #4177a0;
 }
 
 #portfolio article div {
   margin: 10px;
   background: #fff;
-  -webkit-box-shadow: 0 0 6px #e2dfdf;
-          box-shadow: 0 0 6px #e2dfdf;
+  -webkit-box-shadow: 0 6px 6px #e2dfdf;
+          box-shadow: 0 6px 6px #e2dfdf;
 }
 
 #portfolio article div a {
@@ -733,125 +563,317 @@ article {
 
 #portfolio article div span {
   display: block;
-  clear: both;
-  margin: 0;
-  padding: 0 14px;
+  padding: 14px;
   font-size: 14px;
 }
 
 #portfolio article div strong {
-  padding: 8px 0 0;
+  padding: 0;
   font-style: normal;
   color: #000000;
   display: block;
+  font-size: 1.7rem;
 }
 
 #portfolio article div em {
   color: #8a8888;
-  padding: 0 0 8px 0;
   display: block;
   font-style: normal;
+  font-size: 1.4rem;
 }
 
-footer {
-  margin-top: 80px;
+#info {
+  min-height: 90%;
+  padding: 0;
+  margin: 0;
+  background: #007fad;
+  background: radial-gradient(circle, #007fad 0%, #062d4b 100%);
+  -webkit-box-shadow: 0 6px 6px #e2dfdf;
+          box-shadow: 0 6px 6px #e2dfdf;
+}
+
+#info article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 13%;
+}
+
+#info article h1 {
+  font-size: 3rem;
+  font-weight: 100;
+  color: #fff;
+}
+
+#info article p {
+  padding: 0 0 1em;
+  color: #fff;
+  line-height: 1.6em;
+}
+
+#info article aside {
+  width: 60%;
+  padding: 50px 30px 0 0;
+}
+
+#info article figure {
+  width: auto;
+}
+
+#info article figure img {
+  width: 100%;
+  height: auto;
+}
+
+#info ul {
+  text-align: left;
+  color: #fff;
+}
+
+.page h3 {
+  font-size: 2.4rem;
+  padding: 0 0 .6em;
+}
+
+.page article {
+  padding: 40px 0 0;
+  margin: 0;
+}
+
+.page header {
+  top: 0;
+  width: 100%;
+  height: 90px;
+}
+
+.page header nav {
+  margin: 30px 0 0;
+}
+
+.page header nav a {
+  padding: 14px 18px;
+  font-weight: 300;
+  font-size: 1.4rem;
+  line-height: 1.6em;
+  color: #c0d4e6;
+  display: inline-block;
+}
+
+.page header nav a:hover {
+  color: #fff;
+}
+
+.page header nav a i {
+  padding-right: 4px;
+  color: #a4bf8b;
+}
+
+.page #secondary ul {
+  padding: 0 0 1em;
+}
+
+.page #secondary ul li {
+  list-style-type: disc;
+  padding: 0 0 .5em;
+  margin: 0 0 0 1em;
+}
+
+.page #secondary figure {
+  width: auto;
+  height: 100%;
+}
+
+.page #secondary figure p {
+  color: #000;
+  font-size: 1.6rem;
+  padding: 12px 0;
+  text-align: center;
+  font-weight: 500;
+}
+
+.page #secondary figure img {
+  width: 100%;
+  height: auto;
+}
+
+.page #secondary h1 {
+  padding: 0 0 8px;
+}
+
+.page #secondary article section {
+  width: 70%;
+  margin: 0 13%;
+}
+
+.page #secondary article aside {
+  width: 100%;
+}
+
+.page #secondary .scrnshts {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1em;
+}
+
+.page #secondary .screens {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.page #secondary .screens figure, .page #secondary .devices figure {
+  width: auto;
+  height: 100%;
+  padding: 1em 1em 0 0;
+}
+
+.page #secondary .screens figure p, .page #secondary .devices figure p {
+  color: #000;
+  font-size: 1.4rem;
+  padding: 12px 0;
+}
+
+.page #secondary .screens figure img, .page #secondary .devices figure img {
+  width: 100%;
+  height: auto;
+}
+
+.page .store {
+  padding: 12px;
+  background: #ccc;
+}
+
+.page .store a {
+  color: #0262a9;
+}
+
+.page .store span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 13%;
+}
+
+.page .store span img {
+  padding: 0 14px;
+  width: auto;
+  height: 100%;
+}
+
+.page .store span p {
+  padding: 4px 0 0;
+}
+
+.tools {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.tools .item {
+  padding: 0 12px 0 0;
+}
+
+footer#contact {
+  margin-top: 6.6em;
   clear: both;
   border: none;
   background: url(img/bg-footer.png) #01375f no-repeat center bottom;
   background-attachment: fixed;
   width: 100%;
-  padding: 20px 0;
+  padding: 1.2em 0 4em;
   overflow: hidden;
-  height: 100vh;
 }
 
-footer h3 {
+footer#contact section {
+  margin: 0;
+}
+
+footer#contact h3 {
+  color: #fff;
+  text-align: center;
+}
+
+footer#contact p {
   color: #fff;
 }
 
-footer p {
-  color: #fff;
-}
-
-footer em {
-  color: #fff;
-  font-style: normal;
-  display: block;
-  padding-bottom: 8px;
-  text-transform: uppercase;
-  color: #cccccc;
-}
-
-footer strong {
+footer#contact strong {
   color: #c0d4e6;
   font-size: 1.8rem;
   padding: 0 0 6px;
   display: block;
 }
 
-footer .inner {
-  margin: 70px auto 100px;
+footer#contact .inner {
+  margin: 0 100px;
   padding: 0;
   clear: both;
 }
 
-footer .inner a {
+footer#contact .inner a {
   display: block;
   padding: 0;
 }
 
-footer .social {
+footer#contact .social {
   margin: 0;
 }
 
-footer h4 {
+footer#contact h4 {
   color: #fff;
   font-weight: normal;
   font-size: 1.8rem;
   padding: 18px 0 24px;
 }
 
-footer nav {
+footer#contact nav {
   margin: 0;
 }
 
-footer .button {
-  margin-top: 5%;
+footer#contact .button {
   background: rgba(3, 84, 144, 0.4);
+  margin: 5% auto 0;
 }
 
-footer .button:hover {
+footer#contact .button:hover {
   background: rgba(3, 84, 144, 0.9);
 }
 
-footer span a {
+footer#contact span a {
   color: #9c9c9c;
 }
 
-footer i {
+footer#contact i {
   padding-right: 4px;
 }
 
-footer .bioInfo {
+footer#contact .bioInfo {
   margin: 0 16px;
 }
 
-footer .bioInfo p {
+footer#contact .bioInfo p {
   font-size: 1.4rem;
   color: #9ab5ce;
 }
 
-footer .bioInfo .logo {
+footer#contact .bioInfo .logo {
   padding: 0 0 100px 0;
 }
 
-footer .bioInfo span {
+footer#contact .bioInfo span {
   display: block;
   overflow: hidden;
 }
 
-footer .bioInfo img {
+footer#contact .bioInfo img {
   border-radius: 50%;
+}
+
+footer.sm {
+  height: 50px;
 }
 
 .logoBrand {
@@ -881,9 +903,10 @@ footer .bioInfo img {
 }
 
 @media (max-width: 768px) {
-  .intro {
+  .page .secondary article section {
     margin: 0;
-    padding: 14px 0 0;
+    padding: 14px;
+    width: auto;
   }
   #about {
     height: auto;
@@ -896,6 +919,12 @@ footer .bioInfo img {
     width: auto;
     margin: 12px;
     min-height: none;
+  }
+  #about .info div {
+    width: auto;
+  }
+  #about .info figure {
+    display: none;
   }
   #about .skills {
     padding: 12px 0;
@@ -1043,8 +1072,61 @@ footer .bioInfo img {
     padding: 0;
     margin: 0 14px 12px;
   }
-  #portfolio .overlay {
+  #portfolio article .overlay {
     display: none;
+  }
+  #info article {
+    display: block;
+    padding: 0 14px;
+    margin: 0;
+  }
+  #info article aside {
+    width: 100%;
+    padding: 0;
+  }
+  .page .secondary {
+    padding: 0;
+  }
+  .page .secondary .screens {
+    display: block;
+  }
+  .page .secondary article {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  .page .secondary article .scrnshts {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+    margin: 30px 0;
+    width: auto;
+    height: 100%;
+  }
+  .page .secondary article .scrnshts figure {
+    margin: 14px 14px 0;
+  }
+  .page .secondary article .scrnshts img {
+    width: 100%;
+    height: auto;
+  }
+  .page .secondary span {
+    margin: 0;
+  }
+  .page .secondary span p {
+    display: block;
+  }
+}
+
+@media (max-width: 960px) {
+  #portfolio article {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (1fr)[3];
+        grid-template-rows: repeat(3, 1fr);
+  }
+  .page .secondary .scrnshts {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
   }
 }
 
