--- a/css/_header.scss
+++ b/css/_header.scss
@@ -72,8 +72,9 @@ header {
 #mobileNav {
 	display: none;
 }
-#home {
+
 nav {
+	display:flex;
 	margin: 30px 0 0;
 	a {
 		padding: 14px 18px;
@@ -81,7 +82,6 @@ nav {
 		font-size: 1.4rem;
 		line-height: 1.6em;
 		color:$color_bon_jour;
-		display: inline-block;
 		&:hover {
 			color:$white;
 		}
@@ -92,7 +92,4 @@ nav {
 		}
 	}
 
-
-
-}
 
