--- a/css/global.css
+++ b/css/global.css
@@ -65,6 +65,7 @@ html {
   -webkit-box-sizing: inherit;
           box-sizing: inherit;
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 *, *::after, *::before {
@@ -80,6 +81,62 @@ body {
   padding: 0;
   color: #fff;
   height: 100%;
+}
+
+.button {
+  width: 220px;
+  padding: 0.5em 0.225em 0.5em 0.5em;
+  margin: 1.4em 0;
+  text-align: center;
+  color: #fff;
+  display: block;
+  font-weight: 300;
+  text-transform: uppercase;
+  border-radius: 0.4em;
+  background: rgba(3, 84, 144, 0.4);
+  border: 1px solid #4177a0;
+  -webkit-transition: all .9s ease;
+  transition: all .9s ease;
+  -webkit-transition: all .5s ease;
+}
+
+.button:hover {
+  background: #01375f;
+}
+
+.button:hover .fa {
+  color: #fff;
+}
+
+.button .fa {
+  color: #4177a0;
+  font-size: 1.8rem;
+  padding: 0 0 0 .225em;
+}
+
+.top {
+  position: fixed;
+  bottom: 40px;
+  left: 40px;
+  z-index: 1;
+}
+
+.top .fa {
+  display: block;
+  padding: 8px;
+  color: #9c9c9c;
+  font-size: 30px;
+  opacity: .7;
+}
+
+.menu {
+  display: none;
+}
+
+#wrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 h1 {
@@ -141,92 +198,6 @@ strong {
   font-weight: 600;
   padding: 1.6em 0 0;
   font-size: 2rem;
-}
-
-section#home {
-  clear: both;
-  width: 100%;
-  margin: 0 0 50px;
-  position: relative;
-}
-
-section#home .item img {
-  width: 50px;
-  height: auto;
-}
-
-section#home h4 {
-  font-weight: 300;
-  display: block;
-  font-size: 1.8rem;
-  text-align: center;
-  color: #424141;
-  padding: 10px;
-}
-
-section#home ul {
-  text-align: center;
-  padding: 12px;
-}
-
-section#home ul li {
-  display: inline-block;
-  padding: 0 14px;
-  font-size: 1.8rem;
-  font-weight: 300;
-  color: #9ab5ce;
-}
-
-.top {
-  position: fixed;
-  bottom: 40px;
-  left: 40px;
-  z-index: 1;
-}
-
-.top .fa {
-  display: block;
-  padding: 8px;
-  color: #9c9c9c;
-  font-size: 30px;
-  opacity: .7;
-}
-
-.menu {
-  display: none;
-}
-
-#wrapper {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-
-.button {
-  width: 220px;
-  padding: 0.5em 0.225em 0.5em 0.5em;
-  margin: 1.4em 0;
-  text-align: center;
-  color: #fff;
-  display: block;
-  font-weight: 300;
-  text-transform: uppercase;
-  border-radius: 0.4em;
-  background: rgba(3, 84, 144, 0.4);
-  border: 1px solid #4177a0;
-  -webkit-transition: all .9s ease;
-  transition: all .9s ease;
-  -webkit-transition: all .5s ease;
-}
-
-.button:hover {
-  background: rgba(3, 84, 144, 0.9);
-}
-
-.button .fa {
-  color: #9c9c9c;
-  font-size: 1.8rem;
-  padding: 0 0 0 4px;
 }
 
 header strong {
@@ -312,34 +283,56 @@ header .inner {
   display: none;
 }
 
-#home nav {
+nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   margin: 30px 0 0;
 }
 
-#home nav a {
+nav a {
   padding: 14px 18px;
   font-weight: 300;
   font-size: 1.4rem;
   line-height: 1.6em;
   color: #c0d4e6;
-  display: inline-block;
 }
 
-#home nav a:hover {
+nav a:hover {
   color: #fff;
 }
 
-#home nav a i {
+nav a i {
   padding-right: 4px;
   color: #a4bf8b;
 }
 
-.home section {
-  margin: 0 13%;
-}
-
 .intro {
   padding-bottom: 24px;
+}
+
+.tools {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.tools .item {
+  padding: 0 12px 0 0;
+}
+
+.home section:not(#home):not(#info) {
+  margin: 2em 13%;
+}
+
+.page h3 {
+  font-size: 2.225rem;
+  padding: 0 0 .6em;
+}
+
+.page article {
+  padding: 40px 0 0;
+  margin: 0;
 }
 
 #home {
@@ -351,6 +344,19 @@ header .inner {
   padding-top: 0;
   -webkit-box-shadow: 10px 4px 10px #9c9c9c;
           box-shadow: 10px 4px 10px #9c9c9c;
+}
+
+#home ul {
+  text-align: center;
+  padding: 12px;
+}
+
+#home ul li {
+  display: inline-block;
+  padding: 0 14px;
+  font-size: 1.8rem;
+  font-weight: 300;
+  color: #9ab5ce;
 }
 
 #home h1 {
@@ -535,6 +541,7 @@ header .inner {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   border: 1px solid #4177a0;
+  white-space: nowrap;
 }
 
 #portfolio article div {
@@ -630,60 +637,17 @@ header .inner {
   color: #fff;
 }
 
-.page h3 {
-  font-size: 2.4rem;
-  padding: 0 0 .6em;
-}
-
-.page article {
-  padding: 40px 0 0;
-  margin: 0;
-}
-
-.page header {
-  top: 0;
-  width: 100%;
-  height: 90px;
-}
-
-.page header nav {
-  margin: 30px 0 0;
-}
-
-.page header nav a {
-  padding: 14px 18px;
-  font-weight: 300;
-  font-size: 1.4rem;
-  line-height: 1.6em;
-  color: #c0d4e6;
-  display: inline-block;
-}
-
-.page header nav a:hover {
-  color: #fff;
-}
-
-.page header nav a i {
-  padding-right: 4px;
-  color: #a4bf8b;
-}
-
-.page #secondary ul {
+#secondary ul {
   padding: 0 0 1em;
 }
 
-.page #secondary ul li {
+#secondary ul li {
   list-style-type: disc;
   padding: 0 0 .5em;
   margin: 0 0 0 1em;
 }
 
-.page #secondary figure {
-  width: auto;
-  height: 100%;
-}
-
-.page #secondary figure p {
+#secondary figure p {
   color: #000;
   font-size: 1.6rem;
   padding: 12px 0;
@@ -691,25 +655,25 @@ header .inner {
   font-weight: 500;
 }
 
-.page #secondary figure img {
+#secondary figure img {
   width: 100%;
   height: auto;
 }
 
-.page #secondary h1 {
+#secondary h1 {
   padding: 0 0 8px;
 }
 
-.page #secondary article section {
+#secondary article section {
   width: 70%;
   margin: 0 13%;
 }
 
-.page #secondary article aside {
+#secondary article aside {
   width: 100%;
 }
 
-.page #secondary .scrnshts {
+#secondary .scrnshts {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[4];
@@ -717,66 +681,56 @@ header .inner {
   grid-gap: 1em;
 }
 
-.page #secondary .screens {
+#secondary .screens {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.page #secondary .screens figure, .page #secondary .devices figure {
+#secondary .screens figure, #secondary .devices figure {
   width: auto;
   height: 100%;
   padding: 1em 1em 0 0;
 }
 
-.page #secondary .screens figure p, .page #secondary .devices figure p {
+#secondary .screens figure p, #secondary .devices figure p {
   color: #000;
   font-size: 1.4rem;
   padding: 12px 0;
 }
 
-.page #secondary .screens figure img, .page #secondary .devices figure img {
+#secondary .screens figure img, #secondary .devices figure img {
   width: 100%;
   height: auto;
 }
 
-.page .store {
+.store {
   padding: 12px;
   background: #ccc;
 }
 
-.page .store a {
+.store a {
   color: #0262a9;
 }
 
-.page .store span {
+.store span {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin: 0 13%;
 }
 
-.page .store span img {
+.store span img {
   padding: 0 14px;
   width: auto;
   height: 100%;
 }
 
-.page .store span p {
+.store span p {
   padding: 4px 0 0;
 }
 
-.tools {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.tools .item {
-  padding: 0 12px 0 0;
-}
-
-footer#contact {
+footer {
   margin-top: 6.6em;
   clear: both;
   border: none;
@@ -787,88 +741,88 @@ footer#contact {
   overflow: hidden;
 }
 
-footer#contact section {
+footer section {
   margin: 0;
 }
 
-footer#contact h3 {
+footer h3 {
   color: #fff;
   text-align: center;
 }
 
-footer#contact p {
+footer p {
   color: #fff;
 }
 
-footer#contact strong {
+footer strong {
   color: #c0d4e6;
   font-size: 1.8rem;
   padding: 0 0 6px;
   display: block;
 }
 
-footer#contact .inner {
+footer .inner {
   margin: 0 100px;
   padding: 0;
   clear: both;
 }
 
-footer#contact .inner a {
+footer .inner a {
   display: block;
   padding: 0;
 }
 
-footer#contact .social {
+footer .social {
   margin: 0;
 }
 
-footer#contact h4 {
+footer h4 {
   color: #fff;
   font-weight: normal;
   font-size: 1.8rem;
   padding: 18px 0 24px;
 }
 
-footer#contact nav {
+footer nav {
   margin: 0;
 }
 
-footer#contact .button {
+footer .button {
   background: rgba(3, 84, 144, 0.4);
   margin: 5% auto 0;
 }
 
-footer#contact .button:hover {
+footer .button:hover {
   background: rgba(3, 84, 144, 0.9);
 }
 
-footer#contact span a {
+footer span a {
   color: #9c9c9c;
 }
 
-footer#contact i {
+footer i {
   padding-right: 4px;
 }
 
-footer#contact .bioInfo {
+footer .bioInfo {
   margin: 0 16px;
 }
 
-footer#contact .bioInfo p {
+footer .bioInfo p {
   font-size: 1.4rem;
   color: #9ab5ce;
 }
 
-footer#contact .bioInfo .logo {
+footer .bioInfo .logo {
   padding: 0 0 100px 0;
 }
 
-footer#contact .bioInfo span {
+footer .bioInfo span {
   display: block;
   overflow: hidden;
 }
 
-footer#contact .bioInfo img {
+footer .bioInfo img {
   border-radius: 50%;
 }
 
@@ -903,6 +857,15 @@ footer.sm {
 }
 
 @media (max-width: 768px) {
+  h3 {
+    font-size: 2.6rem;
+    padding: 1.2em 0 0;
+    line-height: 1.2em;
+    font-weight: 200;
+  }
+  h4 {
+    padding: .225em 0 1.2em 0;
+  }
   .page .secondary article section {
     margin: 0;
     padding: 14px;
@@ -917,8 +880,7 @@ footer.sm {
   }
   #about .info {
     width: auto;
-    margin: 12px;
-    min-height: none;
+    max-height: 100%;
   }
   #about .info div {
     width: auto;
@@ -951,17 +913,16 @@ footer.sm {
     max-width: 100%;
   }
   section {
+    padding: 0 1.2em;
     height: auto;
     margin-bottom: 16px;
   }
   section .button {
     display: none;
   }
-  #home h3 {
-    font-size: 2rem;
-    padding: 8% 0 0;
+  #home h1 {
     line-height: 1.2em;
-    font-weight: 200;
+    font-weight: 100;
   }
   #home .button {
     display: none;
@@ -1017,9 +978,6 @@ footer.sm {
     max-width: 100%;
     position: relative;
   }
-  #portfolio article {
-    display: block;
-  }
   #tech article {
     display: -ms-grid;
     display: grid;
@@ -1044,7 +1002,7 @@ footer.sm {
   }
   footer .bioInfo {
     width: 100%;
-    padding: 0 14px;
+    padding: 0;
     margin: 0;
     text-align: center;
   }
@@ -1067,10 +1025,13 @@ footer.sm {
   .top .fa {
     display: none;
   }
+  #portfolio article {
+    display: block;
+  }
   #portfolio article div {
     width: auto;
     padding: 0;
-    margin: 0 14px 12px;
+    margin: 0 0 1.2em;
   }
   #portfolio article .overlay {
     display: none;
